--- a/download/templates/download/detail.html
+++ b/download/templates/download/detail.html
@@ -1,1 +1,60 @@
-<h1>{{ download.link }}</h1>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:type" content="website">
+<meta property="og:url" content="http://gotit.com">
+<meta property="og:description" content="مدیریت دانلود" />
+<meta property="og:locale" content="fa_IR" />
+<meta property="og:locale:alternate" content="en_US" />
+<meta property="og:GotIt.com" />
+
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+
+<script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+
+{% if error_message %}
+<div class="col-sm-5 error">
+    <div class="panel panel-warning">
+        <div class="panel-heading">خطا</div>
+        <div class="panel-body">خطا هست</div>
+    </div>
+</div>
+{% endif %}
+
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-9 col-lg-offset-2">
+            <div class="col-md-10">
+
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Link</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{download.id}}</td>
+                        <td>{{download}}</td>
+                        <td>
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped active" role="progressbar"
+                                aria-valuenow={{download.status}} aria-valuemin="0" aria-valuemax="100" style="width:{{download.status}}%">
+                                {{download.status}}%
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
+        </div>
+    </div>
+</div>
