--- a/download/templates/download/detail.html
+++ b/download/templates/download/detail.html
@@ -15,6 +15,14 @@
 
 <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'download/js/progress.js' %}"></script>
+
+<script>
+
+$(document).ready(function(){
+    var progress = setInterval(function() {set({{download.status}});}, 1000);
+});
+</script>
 
 {% if error_message %}
 <div class="col-sm-5 error">
@@ -30,30 +38,25 @@
     <div class="row">
         <div class="col-lg-9 col-lg-offset-2">
             <div class="col-md-10">
-
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Link</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>{{download.id}}</td>
-                        <td>{{download}}</td>
-                        <td>
-                            <div class="progress">
-                                <div class="progress-bar progress-bar-striped active" role="progressbar"
-                                aria-valuenow={{download.status}} aria-valuemin="0" aria-valuemax="100" style="width:{{download.status}}%">
-                                {{download.status}}%
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Link</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>{{download.id}}</td>
+                            <td>{{download}}</td>
+                            <td>
+                                <div class="progress progress-bar progress-bar-success progress-bar-striped active">
                                 </div>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
