--- a/download/templates/download/index.html
+++ b/download/templates/download/index.html
@@ -25,12 +25,55 @@
 </div>
 {% endif %}
 
+{% if user.is_authenticated %}
+
+<script>
+$(document).ready(function(){
+    $("#myModal").modal();
+});
+</script>
+
+<div class="container">
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4><span class="fa fa-lock"></span> Login</h4>
+                </div>
+                <div class="modal-body">
+                    <form role="form">
+                        <div class="form-group">
+                            <label for="usrname"><span class="fa fa-user"></span> Username</label>
+                            <input type="text" class="form-control" id="usrname" placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label for="psw"><span class="fa fa-key"></span> Password</label>
+                            <input type="text" class="form-control" id="psw" placeholder="Enter password">
+                        </div>
+                        <div class="checkbox">
+                            <label><input type="checkbox" value="" checked>Remember me</label>
+                        </div>
+                        <button type="submit" class="btn btn-default btn-success btn-block"><span class="fa fa-sign-in"></span> Login</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="fa fa-remove"></span> Cancel</button>
+                    <p>Not a member? <a href="#">Sign Up</a></p>
+                    <p>Forgot <a href="#">Password?</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% else %}
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12 col-md-offset-1">
             <div class="col-md-10">
                 <form class="download" action="{% url 'download:progress' download_link %}" method="post">
-                    <input type="input" name="download_link" id="download_link" class="input input-lg" placeholder="Enter the URL:" value={{download_link}} required/>
+                    <input type="input" name="download_link" id="download_link" class="input input-lg" placeholder="Enter the URL:" value="{{download_link}}" required/>
                     <span class="help-block">با وارد کردن آدرس فایل خود در نوار آدرس بالا، ما سعی می‌کنیم تا فایل شما را با حداکثر سرعت در اخیار شما قرار دهیم</span>
                     <input type="submit" class="btn btn-primary" value="! بگیر">
                 </form>
@@ -38,3 +81,4 @@
         </div>
     </div>
 </div>
+{% endif %}
